--- a/extraction/index.html
+++ b/extraction/index.html
@@ -76,7 +76,7 @@
                     <li>Incremento en la productividad y recuperación de minerales</li>
                 </ul>
                 <div class="cta-button">
-                    <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20sus%20soluciones%20de%20minado%20superficial"
+                    <a href="https://wa.me/+5216711151676?text=Estoy%20interesado%20en%20sus%20soluciones%20de%20minado%20superficial"
                         target="_blank">Solicitar consultoría personalizada</a>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                     <li>Ingeniería geotécnica especializada</li>
                 </ul>
                 <div class="cta-button">
-                    <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20sus%20soluciones%20de%20minado%20subterráneo"
+                    <a href="https://wa.me/+5216711151676?text=Estoy%20interesado%20en%20sus%20soluciones%20de%20minado%20subterráneo"
                         target="_blank">Descubra nuestras soluciones</a>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                     <li>Soluciones personalizadas para yacimientos complejos</li>
                 </ul>
                 <div class="cta-button">
-                    <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20conocer%20sus%20tecnologías%20especializadas%20de%20extracción"
+                    <a href="https://wa.me/+5216711151676?text=Estoy%20interesado%20en%20conocer%20sus%20tecnologías%20especializadas%20de%20extracción"
                         target="_blank">Consultar opciones tecnológicas</a>
                 </div>
             </div>
@@ -347,7 +347,7 @@
             © Rocs 2025
         </div>
     </footer>
-    <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20sus%20servicios" class="whatsapp-button">
+    <a href="https://wa.me/+5216711151676?text=Estoy%20interesado%20en%20sus%20servicios" class="whatsapp-button">
         <img src="/img/social/whats.png" alt="WhatsApp">
     </a>
     <script src="/js/scroll-animations.js"></script>
