--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                 <div class="cta-actions">
                     <div class="cta-phone">
                         <div class="cta-phone-label">Llámenos ahora:</div>
-                        <div class="cta-phone-number">+123 456 7890</div>
+                        <div class="cta-phone-number">+52 1 671 115 1676</div>
                     </div>
                     <a href="#contact" class="btn btn-dark">
                         Contactar
@@ -554,9 +554,9 @@
                         <div class="card-contact-info">
                             <div>
                                 <p class="info-label">Número principal</p>
-                                <p class="info-value">+123 456 7890</p>
+                                <p class="info-value">+52 1 671 115 1676</p>
                             </div>
-                            <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20sus%20servicios%20mineros"
+                            <a href="https://wa.me/+5216711151676?text=Estoy%20interesado%20en%20sus%20servicios%20mineros"
                                 class="card-action-btn whatsapp-btn">
                                 Iniciar chat
                             </a>
@@ -577,14 +577,12 @@
                             </div>
                         </div>
                         <div class="card-map">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.8354345093747!2d-122.3898746846816!3d37.77492977975938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085807f5b0f0b9f%3A0x8a5a9d6b8b8b8b8b!2s500%20Terry%20Francine%20St%2C%20San%20Francisco%2C%20CA%2094158%2C%20USA!5e0!3m2!1sen!2sus!4v1635095300000!5m2!1sen!2sus"
-                                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3614.143381525989!2d-103.73917342462258!3d25.063128977797547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDAzJzQ3LjMiTiAxMDPCsDQ0JzExLjgiVw!5e0!3m2!1ses-419!2smx!4v1750199927192!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                         <div class="location-details">
                             <div class="detail-item">
                                 <i class="fas fa-building"></i>
-                                <span>500 Terry Francine Street, San Francisco, CA 94158</span>
+                                <span>Velardeña, Dgo.</span>
                             </div>
                             <div class="detail-item">
                                 <i class="fas fa-clock"></i>
@@ -613,7 +611,7 @@
                                 </div>
                                 <div class="method-info">
                                     <p class="method-label">Teléfono</p>
-                                    <p class="method-value">+123 456 7890</p>
+                                    <p class="method-value">+52 1 671 115 1676</p>
                                 </div>
                             </div>
                             <div class="contact-method">
@@ -728,7 +726,7 @@
             © Rocs 2025
         </div>
     </footer>
-    <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20sus%20servicios" class="whatsapp-button">
+    <a href="https://wa.me/5216711151676?text=Estoy%20interesado%20en%20sus%20servicios" class="whatsapp-button">
         <img src="/img/social/whats.png" alt="WhatsApp">
     </a>
     <!-- Scripts -->
