--- a/logistic/index.html
+++ b/logistic/index.html
@@ -364,9 +364,9 @@
                         <div class="card-contact-info">
                             <div>
                                 <p class="info-label">Número principal</p>
-                                <p class="info-value">+123 456 7890</p>
+                                <p class="info-value">+52 1 671 115 1676</p>
                             </div>
-                            <a href="https://wa.me/1234567890?text=Estoy%20interesado%20en%20sus%20servicios%20mineros"
+                            <a href="https://wa.me/+5216711151676?text=Estoy%20interesado%20en%20sus%20servicios%20mineros"
                                 class="card-action-btn whatsapp-btn">
                                 Iniciar chat
                             </a>
@@ -394,7 +394,7 @@
                         <div class="location-details">
                             <div class="detail-item">
                                 <i class="fas fa-building"></i>
-                                <span>500 Terry Francine Street, San Francisco, CA 94158</span>
+                                <span>Velardeña, Dgo.</span>
                             </div>
                             <div class="detail-item">
                                 <i class="fas fa-clock"></i>
@@ -423,7 +423,7 @@
                                 </div>
                                 <div class="method-info">
                                     <p class="method-label">Teléfono</p>
-                                    <p class="method-value">+123 456 7890</p>
+                                    <p class="method-value">+52 1 671 115 1676</p>
                                 </div>
                             </div>
                             <div class="contact-method">
