--- a/extraction/index.html
+++ b/extraction/index.html
@@ -4,7 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soluciones de Extracción y Producción Minera | ROC'S</title>
+    <title>Extracción de Minerales Durango | Minado Superficial y Subterráneo | ROC'S</title>
+<meta name="description" content="Servicios especializados de extracción minera en Durango. Minado superficial, subterráneo y tecnologías avanzadas. +15 años de experiencia en la región.">
+<meta name="keywords" content="extracción minerales Durango, minado superficial Durango, minado subterráneo, lixiviación in situ, servicios extracción minera México">
+<link rel="canonical" href="https://www.rocsmineria.com/extraction">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "name": "Servicios de Extracción Minera",
+  "provider": {
+    "@type": "Organization",
+    "name": "ROC'S Servicios Mineros"
+  },
+  "areaServed": "Durango, México",
+  "description": "Servicios especializados de extracción minera incluyendo minado superficial, subterráneo y tecnologías especializadas",
+  "serviceType": [
+    "Minado superficial",
+    "Minado subterráneo", 
+    "Lixiviación in situ",
+    "Tecnologías de extracción especializadas"
+  ]
+}
+</script>
     <link rel="icon" href="/img/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/extraction.css">
@@ -353,7 +376,46 @@
     <script src="/js/scroll-animations.js"></script>
     <script src="/js/navbar.js"></script>
 
-
+    <!-- Marcado estructurado para empresa local -->
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "ROC'S Servicios Mineros",
+        "image": "https://www.rocsmineria.com/img/Logo.png",
+        "telephone": "+52-1-671-115-1676",
+        "email": "info@rocsmineria.com",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Velardeña",
+            "addressLocality": "Velardeña", 
+            "addressRegion": "Durango",
+            "postalCode": "35030",
+            "addressCountry": "MX"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 25.063129,
+            "longitude": -103.738573
+        },
+        "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+            "Monday",
+            "Tuesday", 
+            "Wednesday",
+            "Thursday",
+            "Friday"
+            ],
+            "opens": "08:00",
+            "closes": "18:00"
+        },
+        "serviceArea": {
+            "@type": "Place",
+            "name": "Durango, México"
+        }
+        }
+    </script>
 </body>
 
 </html>
