--- a/index.html
+++ b/index.html
@@ -4,7 +4,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROC'S Servicios Mineros</title>
+    <title>ROC'S Servicios Mineros | Extracción, Procesamiento y Logística Minera</title>
+    <meta name="description"
+        content="Servicios mineros especializados en Durango, México. Extracción, procesamiento, logística y comercialización de minerales con más de 15 años de experiencia en la región.">
+    <meta name="keywords"
+        content="servicios mineros Durango, extracción minerales México, procesamiento minerales, logística minera, minería Durango, servicios mineros México, empresa minera Durango">
+    <meta name="geo.region" content="MX-DUR">
+    <meta name="geo.placename" content="Durango, México">
+    <meta name="geo.position" content="25.063129;-103.738573">
+    <meta name="ICBM" content="25.063129, -103.738573">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="ROC'S Servicios Mineros Durango | Líderes en Servicios Mineros">
+    <meta property="og:description"
+        content="Servicios mineros especializados en Durango, México. Extracción, procesamiento y logística con tecnología de vanguardia.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.rocsmineria.com">
+    <meta property="og:image" content="https://www.rocsmineria.com/img/Logo.png">
+    <meta property="og:locale" content="es_MX">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ROC'S Servicios Mineros Durango">
+    <meta name="twitter:description" content="Servicios mineros especializados en Durango, México">
+
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "ROC'S Servicios Mineros",
+        "url": "https://www.rocsmineria.com",
+        "logo": "https://www.rocsmineria.com/img/Logo.png",
+        "description": "Empresa de servicios mineros especializada en extracción, procesamiento y logística en Durango, México",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Velardeña",
+            "addressRegion": "Durango",
+            "addressCountry": "MX"
+        },
+        "telephone": "+52-1-671-115-1676",
+        "email": "info@rocsmineria.com",
+        "foundingDate": "2010",
+        "areaServed": {
+            "@type": "Place",
+            "name": "Durango, México"
+        },
+        "serviceType": [
+            "Extracción de minerales",
+            "Procesamiento de minerales", 
+            "Logística minera",
+            "Comercialización de minerales"
+        ]
+        }
+    </script>
     <link rel="icon" href="/img/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/index.css">
@@ -577,7 +630,10 @@
                             </div>
                         </div>
                         <div class="card-map">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3614.143381525989!2d-103.73917342462258!3d25.063128977797547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDAzJzQ3LjMiTiAxMDPCsDQ0JzExLjgiVw!5e0!3m2!1ses-419!2smx!4v1750199927192!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3614.143381525989!2d-103.73917342462258!3d25.063128977797547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDAzJzQ3LjMiTiAxMDPCsDQ0JzExLjgiVw!5e0!3m2!1ses-419!2smx!4v1750199927192!5m2!1ses-419!2smx"
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                         <div class="location-details">
                             <div class="detail-item">
@@ -738,6 +794,46 @@
     <script src="/js/tab.js"></script>
     <script src="/js/stadistics.js"></script>
     <script src="/js/scroll-animations.js"></script>
+    <!-- Marcado estructurado para empresa local -->
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "ROC'S Servicios Mineros",
+        "image": "https://www.rocsmineria.com/img/Logo.png",
+        "telephone": "+52-1-671-115-1676",
+        "email": "info@rocsmineria.com",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Velardeña",
+            "addressLocality": "Velardeña", 
+            "addressRegion": "Durango",
+            "postalCode": "35030",
+            "addressCountry": "MX"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 25.063129,
+            "longitude": -103.738573
+        },
+        "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+            "Monday",
+            "Tuesday", 
+            "Wednesday",
+            "Thursday",
+            "Friday"
+            ],
+            "opens": "08:00",
+            "closes": "18:00"
+        },
+        "serviceArea": {
+            "@type": "Place",
+            "name": "Durango, México"
+        }
+        }
+    </script>
 </body>
 
 </html>
