--- a/minerals/index.html
+++ b/minerals/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos Minerales | ROC'S Servicios Mineros</title>
+    <title>Venta de Minerales Durango | Oro, Plata, Cobre, Zinc | ROC'S Minerales</title>
+    <meta name="description"
+        content="Comercialización de minerales de alta calidad desde Durango. Oro, plata, cobre, zinc, plomo y litio con certificaciones internacionales. Precios competitivos.">
+    <meta name="keywords"
+        content="venta minerales Durango, oro plata Durango, cobre zinc México, comercialización minerales, minerales alta pureza, venta minerales México">
+    <link rel="canonical" href="https://www.rocsmineria.com/minerals">
     <link rel="icon" href="/img/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/minerals.css">
@@ -255,7 +260,8 @@
             <span class="certification-text">Industria Limpia</span>
         </div>
         <div class="certification-item">
-            <img src="/img/logos/irma.webp" alt="Iniciativa para la Garantía de Minería Responsable" class="certification-icon">
+            <img src="/img/logos/irma.webp" alt="Iniciativa para la Garantía de Minería Responsable"
+                class="certification-icon">
             <span class="certification-text">Iniciativa para la Garantía de Minería Responsable </span>
         </div>
         <div class="certification-item">
@@ -426,7 +432,46 @@
         });
     </script>
     <script src="/js/scroll-animations.js"></script>
-
+    <!-- Marcado estructurado para empresa local -->
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "ROC'S Servicios Mineros",
+        "image": "https://www.rocsmineria.com/img/Logo.png",
+        "telephone": "+52-1-671-115-1676",
+        "email": "info@rocsmineria.com",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Velardeña",
+            "addressLocality": "Velardeña", 
+            "addressRegion": "Durango",
+            "postalCode": "35030",
+            "addressCountry": "MX"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 25.063129,
+            "longitude": -103.738573
+        },
+        "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+            "Monday",
+            "Tuesday", 
+            "Wednesday",
+            "Thursday",
+            "Friday"
+            ],
+            "opens": "08:00",
+            "closes": "18:00"
+        },
+        "serviceArea": {
+            "@type": "Place",
+            "name": "Durango, México"
+        }
+        }
+    </script>
 </body>
 
 </html>
