--- a/prosecution/index.html
+++ b/prosecution/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Procesamiento de Minerales | ROC'S Servicios Mineros</title>
+    <title>Procesamiento de Minerales Durango | Tecnología Avanzada | ROC'S</title>
+    <meta name="description"
+        content="Procesamiento especializado de minerales en Durango. Trituración, molienda, concentración, hidrometalurgia y pirometalurgia con tecnología de vanguardia.">
+    <meta name="keywords"
+        content="procesamiento minerales Durango, beneficio minerales, concentración minerales, hidrometalurgia México, pirometalurgia">
+    <link rel="canonical" href="https://www.rocsmineria.com/prosecution">
     <link rel="icon" href="/img/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/prosessing.css">
@@ -39,7 +44,8 @@
     <section class="hero hero-process">
         <div class="hero-content">
             <h1>Soluciones de Procesamiento de Minerales</h1>
-            <p style="text-align: center;">Optimizamos sus operaciones con tecnología de vanguardia y expertise técnico</p>
+            <p style="text-align: center;">Optimizamos sus operaciones con tecnología de vanguardia y expertise técnico
+            </p>
         </div>
     </section>
 
@@ -155,7 +161,8 @@
         <div class="about-content">
             <div class="about-text">
                 <h2 style="text-align: center;">Tecnología de Vanguardia a su Servicio</h2>
-                <p style="text-align: center;">Integramos las últimas innovaciones tecnológicas para maximizar el rendimiento de sus operaciones de
+                <p style="text-align: center;">Integramos las últimas innovaciones tecnológicas para maximizar el
+                    rendimiento de sus operaciones de
                     procesamiento:</p>
             </div>
         </div>
@@ -223,7 +230,8 @@
     <section class="cta-section">
         <div class="cta-container">
             <h2>Transforme sus operaciones de procesamiento</h2>
-            <p style="text-align: center;">Permítanos ayudarle a maximizar la recuperación de minerales y reducir costos operativos con nuestras
+            <p style="text-align: center;">Permítanos ayudarle a maximizar la recuperación de minerales y reducir costos
+                operativos con nuestras
                 soluciones personalizadas.</p>
             <a href="/index.html#contact" class="cta-button">Solicite una consulta</a>
         </div>
@@ -296,10 +304,49 @@
     </footer>
     <a href="https://wa.me/5216711151676?text=Estoy%20interesado%20en%20sus%20servicios" class="whatsapp-button">
         <img src="/img/social/whats.png" alt="WhatsApp">
-    </a>    
+    </a>
     <script src="/js/navbar.js"></script>
     <script src="/js/scroll-animations.js"></script>
-    
+    <!-- Marcado estructurado para empresa local -->
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "ROC'S Servicios Mineros",
+        "image": "https://www.rocsmineria.com/img/Logo.png",
+        "telephone": "+52-1-671-115-1676",
+        "email": "info@rocsmineria.com",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Velardeña",
+            "addressLocality": "Velardeña", 
+            "addressRegion": "Durango",
+            "postalCode": "35030",
+            "addressCountry": "MX"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 25.063129,
+            "longitude": -103.738573
+        },
+        "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+            "Monday",
+            "Tuesday", 
+            "Wednesday",
+            "Thursday",
+            "Friday"
+            ],
+            "opens": "08:00",
+            "closes": "18:00"
+        },
+        "serviceArea": {
+            "@type": "Place",
+            "name": "Durango, México"
+        }
+        }
+</script>
 </body>
 
 </html>
