--- a/logistic/index.html
+++ b/logistic/index.html
@@ -408,8 +408,9 @@
                         </div>
                         <div class="card-map">
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.8354345093747!2d-122.3898746846816!3d37.77492977975938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085807f5b0f0b9f%3A0x8a5a9d6b8b8b8b8b!2s500%20Terry%20Francine%20St%2C%20San%20Francisco%2C%20CA%2094158%2C%20USA!5e0!3m2!1sen!2sus!4v1635095300000!5m2!1sen!2sus"
-                                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3614.143381525989!2d-103.73917342462258!3d25.063128977797547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDAzJzQ3LjMiTiAxMDPCsDQ0JzExLjgiVw!5e0!3m2!1ses-419!2smx!4v1750199927192!5m2!1ses-419!2smx"
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                         <div class="location-details">
                             <div class="detail-item">
