[UPDATE] Footer and politics

--- a/prosecution/index.html
+++ b/prosecution/index.html
@@ -286,14 +286,14 @@
         <!-- Enlaces de Políticas -->
         <div class="policy-links">
             <ul>
-                <li><a href="/terms-of-use">Terms of use</a></li>
-                <li><a href="/privacy-policy">Privacy policy</a></li>
-                <li><a href="/cookies-policy">Cookies policy</a></li>
-                <li><a href="/accessibility">Accessibility</a></li>
-                <li><a href="/sustainability/ethics-and-compliance/speaking-openly#misconduct">Speaking openly/Raising
-                        concerns</a></li>
-                <li><a href="/.rest/api/v1/documents/static/30c5e6f3-a66e-44b9-a842-45e43885e26a/GLEN_2023-Modern-Slavery-Statement.pdf"
-                        target="_blank">Modern Slavery Statement</a></li>
+                <li><a href="/terms-of-use">Términos de uso</a></li>
+                <li><a href="/privacy-policy">Política de privacidad</a></li>
+                <li><a href="/cookies-policy">Política de cookies</a></li>
+                <li><a href="/accessibility">Accesibilidad</a></li>
+                <li><a href="/speaking-openly">Comunicación abierta / Reportar inquietudes</a></li>
+                <li><a href="/modern-slavery-statement">Modern Slavery Statement</a></li>
+                
+                
             </ul>
         </div>
 
