--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -379,7 +379,7 @@
                 <li><a href="/cookies-policy">Política de cookies</a></li>
                 <li><a href="/accessibility" class="active">Accesibilidad</a></li>
                 <li><a href="/speaking-openly">Comunicación abierta / Reportar inquietudes</a></li>
-                <li><a href="/modern-slavery-statement">Modern Slavery Statement</a></li>
+                <li><a href="/modern-slavery-statement">Declaración contra la esclavitud moderna</a></li>
             </ul>
         </div>
 
