--- a/cookies-policy/index.html
+++ b/cookies-policy/index.html
@@ -371,7 +371,7 @@
                 <li><a href="/cookies-policy" class="active">Política de cookies</a></li>
                 <li><a href="/accessibility">Accesibilidad</a></li>
                 <li><a href="/speaking-openly">Comunicación abierta / Reportar inquietudes</a></li>
-                <li><a href="/modern-slavery-statement">Modern Slavery Statement</a></li>
+                <li><a href="/modern-slavery-statement">Declaración contra la esclavitud moderna</a></li>
             </ul>
         </div>
 
