--- a/prosecution/index.html
+++ b/prosecution/index.html
@@ -291,7 +291,7 @@
                 <li><a href="/cookies-policy">Política de cookies</a></li>
                 <li><a href="/accessibility">Accesibilidad</a></li>
                 <li><a href="/speaking-openly">Comunicación abierta / Reportar inquietudes</a></li>
-                <li><a href="/modern-slavery-statement">Modern Slavery Statement</a></li>
+                <li><a href="/modern-slavery-statement">Declaración contra la esclavitud moderna</a></li>
                 
                 
             </ul>
