--- a/speaking-openly/index.html
+++ b/speaking-openly/index.html
@@ -467,9 +467,9 @@
                 <li><a href="/cookies-policy">Política de cookies</a></li>
                 <li><a href="/accessibility">Accesibilidad</a></li>
                 <li><a href="/speaking-openly">Comunicación abierta / Reportar inquietudes</a></li>
-                <li><a href="/modern-slavery-statement">Modern Slavery Statement</a></li>
+                <li><a href="/modern-slavery-statement">Declaración contra la esclavitud moderna</a></li>
                 <li><a href="/speaking-openly" class="active">Comunicación abierta / Reportar inquietudes</a></li>
-                <li><a href="/modern-slavery-statement">Modern Slavery Statement</a></li>
+                <li><a href="/modern-slavery-statement">Declaración contra la esclavitud moderna</a></li>
             </ul>
         </div>
 
