--- a/logistic/index.html
+++ b/logistic/index.html
@@ -46,7 +46,9 @@
             <ul>
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/extraction">Extracción</a></li>
-                <li><a href="/prosecution">Procesamiento de Minerales</a></li>
+                <li><a href="/prosecution">Procesamiento y Fundición de Minerales</a></li>
+                <li><a href="/water-supply" >Surtido de Agua</a></li>
+                <li><a href="/barite">Barita Grado Petrolero</a></li>
                 <li><a href="/logistic" class="active">Logística y Transporte</a></li>
                 <li><a href="/minerals">Comercialización y Venta de Minerales</a></li>
             </ul>
