--- a/minerals/index.html
+++ b/minerals/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="/img/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/minerals.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <header>
@@ -29,7 +30,9 @@
             <ul>
                 <li><a href="/">Inicio</a></li>
                 <li><a href="/extraction">Extracción</a></li>
-                <li><a href="/prosecution">Procesamiento de Minerales</a></li>
+                <li><a href="/prosecution">Procesamiento y Fundición de Minerales</a></li>
+                <li><a href="/water-supply">Surtido de Agua</a></li>
+                <li><a href="/barite">Barita Grado Petrolero</a></li>
                 <li><a href="/logistic">Logística y Transporte</a></li>
                 <li><a href="/minerals" class="active">Comercialización y Venta de Minerales</a></li>
             </ul>
@@ -250,6 +253,151 @@
         </div>
     </section>
 
+    <!-- Nueva Sección: Compra y Venta de Concentrados -->
+    <section class="concentrates-section">
+        <div class="container">
+            <div class="section-header">
+                <div class="section-label">Servicios Especializados</div>
+                <h2 class="section-title">Compra y Venta de Concentrados de Oro y Plata</h2>
+                <p class="section-text">
+                    Ofrecemos servicios profesionales de evaluación, compra y comercialización de concentrados de metales preciosos con los más altos estándares de la industria.
+                </p>
+            </div>
+
+            <div class="concentrates-grid">
+                <!-- Servicio de Compra -->
+                <div class="concentrate-card purchase-card">
+                    <div class="card-header">
+                        <div class="card-icon purchase-icon">
+                            <i class="fas fa-shopping-cart"></i>
+                        </div>
+                        <h3>Compra de Concentrados</h3>
+                    </div>
+                    <div class="card-content">
+                        <h4>Evaluamos y compramos sus concentrados</h4>
+                        <div class="specs-list">
+                            <h5>Especificaciones que aceptamos:</h5>
+                            <ul>
+                                <li><strong>Oro:</strong> Mínimo 15 g/t en concentrado</li>
+                                <li><strong>Plata:</strong> Mínimo 500 g/t en concentrado</li>
+                                <li><strong>Humedad:</strong> Máximo 8%</li>
+                                <li><strong>Volumen mínimo:</strong> 5 toneladas</li>
+                            </ul>
+                        </div>
+                        <div class="process-steps">
+                            <h5>Nuestro proceso:</h5>
+                            <div class="step">
+                                <span class="step-number">1</span>
+                                <span class="step-text">Muestreo y análisis independiente</span>
+                            </div>
+                            <div class="step">
+                                <span class="step-number">2</span>
+                                <span class="step-text">Cotización basada en precios LME/LBMA</span>
+                            </div>
+                            <div class="step">
+                                <span class="step-number">3</span>
+                                <span class="step-text">Pago en 48 horas tras confirmación</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Servicio de Venta -->
+                <div class="concentrate-card sale-card">
+                    <div class="card-header">
+                        <div class="card-icon sale-icon">
+                            <i class="fas fa-handshake"></i>
+                        </div>
+                        <h3>Venta de Concentrados</h3>
+                    </div>
+                    <div class="card-content">
+                        <h4>Comercializamos concentrados de alta calidad</h4>
+                        <div class="specs-list">
+                            <h5>Productos disponibles:</h5>
+                            <ul>
+                                <li><strong>Concentrado de Oro:</strong> 25-45 g/t</li>
+                                <li><strong>Concentrado de Plata:</strong> 800-2500 g/t</li>
+                                <li><strong>Concentrados mixtos:</strong> Au + Ag</li>
+                                <li><strong>Disponibilidad:</strong> 50-200 ton/mes</li>
+                            </ul>
+                        </div>
+                        <div class="certifications-list">
+                            <h5>Certificaciones incluidas:</h5>
+                            <div class="cert-item">
+                                <i class="fas fa-certificate"></i>
+                                <span>Análisis certificado por laboratorio independiente</span>
+                            </div>
+                            <div class="cert-item">
+                                <i class="fas fa-shield-alt"></i>
+                                <span>Certificado de origen y trazabilidad</span>
+                            </div>
+                            <div class="cert-item">
+                                <i class="fas fa-file-contract"></i>
+                                <span>Documentación completa de exportación</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Ventajas Competitivas -->
+            <div class="advantages-section">
+                <h3>¿Por qué elegir ROC'S para concentrados?</h3>
+                <div class="advantages-grid">
+                    <div class="advantage-item">
+                        <div class="advantage-icon">
+                            <i class="fas fa-microscope"></i>
+                        </div>
+                        <h4>Análisis Certificado</h4>
+                        <p>Laboratorio propio con certificación ISO 17025 para análisis de metales preciosos</p>
+                    </div>
+                    <div class="advantage-item">
+                        <div class="advantage-icon">
+                            <i class="fas fa-dollar-sign"></i>
+                        </div>
+                        <h4>Mejores Precios</h4>
+                        <p>Cotizaciones competitivas basadas en precios internacionales actualizados diariamente</p>
+                    </div>
+                    <div class="advantage-item">
+                        <div class="advantage-icon">
+                            <i class="fas fa-shipping-fast"></i>
+                        </div>
+                        <h4>Logística Especializada</h4>
+                        <p>Manejo seguro y transporte especializado con seguimiento completo</p>
+                    </div>
+                    <div class="advantage-item">
+                        <div class="advantage-icon">
+                            <i class="fas fa-clock"></i>
+                        </div>
+                        <h4>Pagos Rápidos</h4>
+                        <p>Transferencias bancarias en 48 horas tras confirmación de análisis</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- CTA para Concentrados -->
+            <div class="concentrates-cta">
+                <div class="cta-content">
+                    <h3>¿Tiene concentrados para vender o necesita adquirir?</h3>
+                    <p>Nuestros especialistas están listos para evaluar su material y ofrecerle las mejores condiciones del mercado.</p>
+                    <div class="cta-buttons">
+                        <a href="https://wa.me/+5216711151676?text=Tengo%20concentrados%20de%20oro%20y%20plata%20para%20vender" class="btn-concentrate primary">
+                            <i class="fas fa-upload"></i>
+                            Vender Concentrados
+                        </a>
+                        <a href="https://wa.me/+5216711151676?text=Necesito%20comprar%20concentrados%20de%20oro%20y%20plata" class="btn-concentrate secondary">
+                            <i class="fas fa-shopping-cart"></i>
+                            Comprar Concentrados
+                        </a>
+                    </div>
+                    <div class="contact-note">
+                        <p><strong>Atención 24/7:</strong> +52 1 671 115 1676 | concentrados@rocsmineria.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="certifications">
         <div class="certification-item">
             <img src="/img/logos/iso9001.svg" alt="ISO Certified" class="certification-icon">
@@ -432,46 +580,6 @@
         });
     </script>
     <script src="/js/scroll-animations.js"></script>
-    <!-- Marcado estructurado para empresa local -->
-    <script type="application/ld+json">
-        {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "ROC'S Servicios Mineros",
-        "image": "https://www.rocsmineria.com/img/Logo.png",
-        "telephone": "+52-1-671-115-1676",
-        "email": "info@rocsmineria.com",
-        "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "Velardeña",
-            "addressLocality": "Velardeña", 
-            "addressRegion": "Durango",
-            "postalCode": "35030",
-            "addressCountry": "MX"
-        },
-        "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 25.063129,
-            "longitude": -103.738573
-        },
-        "openingHoursSpecification": {
-            "@type": "OpeningHoursSpecification",
-            "dayOfWeek": [
-            "Monday",
-            "Tuesday", 
-            "Wednesday",
-            "Thursday",
-            "Friday"
-            ],
-            "opens": "08:00",
-            "closes": "18:00"
-        },
-        "serviceArea": {
-            "@type": "Place",
-            "name": "Durango, México"
-        }
-        }
-    </script>
 </body>
 
 </html>
